add logger for dao and model