@@ -1,6 +1,5 @@
 package com.travel.filter;
 
-import com.google.common.collect.ImmutableSet;
 import com.travel.dao.entity.User;
 
 import javax.servlet.*;
@@ -12,7 +11,7 @@ import java.util.Set;
 
 @WebFilter(filterName = "SessionFilter")
 public class SessionFilter implements Filter {
-    private static final Set<String> IGNORE_PATHS = ImmutableSet.of("/index.jsp", "/", "/Login", "/register.jsp", "/Register", "/styles/error.css");
+    private static final Set<String> IGNORE_PATHS = Set.of("/index.jsp", "/", "/Login", "/register.jsp", "/Register", "/styles/error.css");
 
     @Override
     public void init(FilterConfig filterConfig) throws ServletException {
